--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Exercises/Week8(T)/.ipynb_checkpoints/midterm_draw_graph-checkpoint.ipynb
 Exercises/Week8(T)/midterm_201801627_이소현.zip
 Exercises/Week8(T)/midterm_201801627_이소현/midterm_draw_graph.ipynb
 Exercises/Week8(T)/midterm_201801627_이소현/인천광역시 연수구_월별_코로나19_확진자 수_20210809.csv
+Exercises/Week9/draw_movie_ranking_graph_hw.ipynb
